<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".activities.MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        android:elevation="4dp"
       android:theme="@style/Theme.MyAppTheme" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <RelativeLayout
                android:id="@+id/topLyt"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:rotation="180"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sunrise" />


                <ImageView
                    android:id="@+id/icon_one"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="150dp"
                    android:layout_centerHorizontal="true"
                    android:rotation="180"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pentagon" />


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                   android:layout_below="@+id/icon_one"
                    android:rotation="180"
                    android:alpha="5"
                    android:layout_marginTop="90dp"
                    android:layout_marginLeft="80dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pentagon" />

                <TextView
                    android:id="@+id/temp_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/temp_min_max"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="29"
                    android:textColor="@color/white"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/temp_min_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="10dp"
                    android:text="Sunny"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>


            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="50dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="18dp"
                android:background="@color/divider_white"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="5dp"
                android:background="@color/divider_white"/>

            <LinearLayout
                android:id="@+id/lyt_percipitation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/percipation_probability"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/percipitation_probab"
                        android:textColor="@color/white_50"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/percipation_probability_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0%"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/percipation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/percipitation"
                        android:textColor="@color/white_50"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/percipation_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0.0mm"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lyt_wind_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/wind_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/white_50"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/wind_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="3km/h"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/perceived_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/perceived_temp"
                        android:textColor="@color/white_50"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/perceived_temp_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="33"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lyt_hum_visibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/himidity_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/white_50"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/humidity_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="69%"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/visibility_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:textColor="@color/white_50"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/visibility_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="2.8KM"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/lyt_uv_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/uv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uv"
                        android:textColor="@color/white_50"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/uv_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Low"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pressure_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/white_50"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/pressure_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1012hpa"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</RelativeLayout>